@@ -1,3 +1,10 @@
+2007-04-01  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/util.c (gprintf):  Accept the ' format specifier, which
+	asks for digits to be grouped and separated according to the current
+	locale.  We just pass it on to the C library for application.
+	Bug #1692550
+
 2007-03-27  Ethan Merritt  <merritt@u.washington.edu>
 
 	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.
@@ -6,7 +13,7 @@
 
 	* src/color.h src/graphics.c (plot_image_or_update_axes)
 	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
-	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
+	filled_polygon_3dcoords filled_polygon_3dcoords_zfixed):
 	Change gpiPoints to contain signed x,y values. This is what the
 	explanatory comment always implied ("same as in gd.h"), but it 
 	wasn't true.  The change fixes several image and polygon clipping
